--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -1,12 +1,11 @@
-%p
-  %b User:
-  = @message.try(:user).try(:name)
-%p
-  = @message.title
-%p
-  = @message.content
-%p
-  = @message.try(:category).try(:name)
-%p
-  %b Votos:
-  = @message.votes_count
+%li.message
+  %h4= @message.title
+  .content= simple_format @message.content
+  .meta_data
+    .avatar
+    .name= @message.try(:user).try(:name)
+    .votes
+      = @message.votes_count
+      .submit
+        = simple_form_for Vote.new(:message_id => @message.id), :remote => true do |f|
+          = f.button :submit, "Votar"
