--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -1,13 +1,13 @@
 %li.message
-  %h4= @message.title
-  .content= simple_format @message.content
+  %h4= message.title
+  .content= simple_format message.content
   .meta_data
     .avatar
-    .name= @message.try(:user).try(:name)
+    .name= message.try(:user).try(:name)
     .votes
       .vote_count
-        = @message.votes_count
+        = message.votes_count
         votos
       .submit
-        = simple_form_for Vote.new(:message_id => @message.id), :remote => true do |f|
+        = simple_form_for Vote.new(:message_id => message.id), :remote => true do |f|
           = f.button :submit, "Votar"
