--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -412,6 +412,7 @@ box-shadow: 0px 0px 10px 0px #ccd6e3;
 	/*background-color: #ccd6e3;*/
 		background-color: #eef6fb;
 	list-style-type: none;
+	margin-bottom: 20px;
 }
 
 .message input#vote_submit.button {
@@ -430,6 +431,13 @@ box-shadow: 0px 0px 10px 0px #ccd6e3;
 
 #messages_list li.message h4 {
 	margin-top: 0px;
-	margin-bottom: 10px;
+	margin-bottom: 0px;
+}
+
+#messages_list li.message div.content p {
+	margin-top: 0px;
+	font-size: 11px;
+	color: #7d7d7d;
+	line-height: 1.6em;
 }
 
