--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,15 @@
     <%= yield %>    
 
   </div>
-
+  <div id="fb-root"></div>
+  <script src="http://connect.facebook.net/en_US/all.js"></script>
+  <script>
+  FB.init({
+  appId : '136578643087393',
+  status : true, // check login status
+  cookie : true, // enable cookies to allow the server to access the session
+  xfbml : true // parse XFBML
+  });
+  </script>
 </body>
 </html>
