Changes how votes are made

--- a/app/views/votes/create.js.erb
+++ b/app/views/votes/create.js.erb
@@ -1,1 +1,2 @@
-$('#message_<%= @vote.message.id %>').replaceWith('<%= escape_javascript(render(:partial => "/messages/message", :object =>@vote.message)) %>');
+<% @message.reload %> 
+$('#message_<%= @message.id %>').replaceWith('<%= escape_javascript(render(:partial => "/messages/message", :object =>@message)) %>');
