--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -405,7 +405,7 @@ ul#messages_list li {
 	float: left;
 	margin-right: 20px;
 	padding: 10px;
-	width: 200px;
+	width: 240px;
 		-webkit-box-shadow: 0px 0px 10px 0px #ccd6e3;
 -moz-box-shadow: 0px 0px 10px 0px #ccd6e3;
 box-shadow: 0px 0px 10px 0px #ccd6e3;
@@ -413,6 +413,7 @@ box-shadow: 0px 0px 10px 0px #ccd6e3;
 		background-color: #eef6fb;
 	list-style-type: none;
 	margin-bottom: 20px;
+	overflow: hidden;
 }
 
 .message input#vote_submit.button {
@@ -439,5 +440,17 @@ box-shadow: 0px 0px 10px 0px #ccd6e3;
 	font-size: 11px;
 	color: #7d7d7d;
 	line-height: 1.6em;
+	display: block;
+	width: 240px;
+	overflow: auto;
+}
+
+.message div.oembed-container div a img {
+	width: 240px;
+}
+
+a.media {
+	width: 100px !important;
+	display: none;
 }
 
