Updates with new gems and real time support

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,6 +29,7 @@
   xfbml : true // parse XFBML
   });
   </script>
-  <%= include_javascripts :app %>   
+  <%= include_javascripts :app %> 
+  <script src="http://js.pusherapp.com/1.8/pusher.min.js" type="text/javascript"></script>    
 </body>
 </html>
