Changes and show more info

--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -1,5 +1,5 @@
 %li.message{:id => "message_#{message.id}"}
-  %h4= message.title
+  %h4= link_to message.title, message
   .content= simple_format message.content
   .meta_data
     .avatar
