--- a/app/views/messages/show.html.haml
+++ b/app/views/messages/show.html.haml
@@ -4,10 +4,12 @@
     .content= simple_format @message.content
     .meta_data
       .avatar
+        - if @message.user
+          = image_url "http://graph.facebook.com/#{@message.user.facebook_uid}/picture", :size => "20x20"      
       .name= @message.try(:user).try(:name)
       .votes
         = render :partial => "messages/message_data", :object => @message
 
-  #fb-root
-  %script{:src => "http://connect.facebook.net/en_US/all.js#xfbml=1"}
-  %fb:comments{:href => message_url(@message), :num_posts => "10", :width => "500"}
+#fb-root{:style => "display:block;clear:both"}
+%script{:src => "http://connect.facebook.net/en_US/all.js#xfbml=1"}
+%fb:comments{:href => message_url(@message), :num_posts => "10", :width => "500"}
