--- a/app/views/messages/show.html.haml
+++ b/app/views/messages/show.html.haml
@@ -1,15 +1,33 @@
-%ul#messages_list
-  %li.message{:id => "message_#{@message.id}"}
-    %h4= @message.title
-    .content= simple_format @message.content
-    .meta_data
-      .avatar
-        - if @message.user
-          = image_url "http://graph.facebook.com/#{@message.user.facebook_uid}/picture", :size => "20x20"      
-      .name= @message.try(:user).try(:name)
-      .votes
-        = render :partial => "messages/message_data", :object => @message
+.inner
+  #messages_list
+    .message{:id => "message_#{@message.id}", :title => @message.title}
+      .share_zone
+        .title
+          = link_to truncate(@message.title, :length => 140), @message, :title => @message.title
+        .icons
+          = link_to "Facebook", "#", :class => "facebook_icon"
+          = link_to "Twitter", "#", :class => "twitter_icon"
+      .photo_zone
+        = link_to @message do
+          - if @message.photo_file_name
+            = image_tag @message.photo.url(:big)
+          - else
+            = image_tag "default.jpg"
+      .meta_data
+        .avatar
+        .votes
+          = render :partial => "messages/message_data", :object => @message
 
-#fb-root{:style => "display:block;clear:both"}
-%script{:src => "http://connect.facebook.net/en_US/all.js#xfbml=1"}
-%fb:comments{:href => message_url(@message), :num_posts => "10", :width => "500"}
+  .message_content
+    .ingredients
+      %h3 Ingredientes
+      .content
+        = simple_format @message.ingredients
+    .how_to
+      %h3 ¿Cómo prepararla?
+      .content
+        = simple_format @message.content
+
+  #fb-root{:style => "display:block;clear:both"}
+  %script{:src => "http://connect.facebook.net/en_US/all.js#xfbml=1"}
+  %fb:comments{:href => message_url(@message), :num_posts => "10", :width => "500"}
