--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -1,15 +1,17 @@
 /* @override 
 	http://kato.dev/stylesheets/layout.css?1308524046
 	http://kato.dev/stylesheets/layout.css
+	http://localhost:3000/stylesheets/layout.css
 */
 
 body {
+	background-color: black;
 	background-image: -webkit-gradient(
     linear,
     left bottom,
     left top,
     color-stop(0.2, rgb(28,49,77)),
-    color-stop(0.5, rgb(43,88,143))
+    color-stop(0.5, rgb(0,0,0))
 );
 background-image: -moz-linear-gradient(
     center bottom,
@@ -22,6 +24,59 @@ background-image: -moz-linear-gradient(
 
 }
 
+.sidebar h3 {
+	margin-top: 0px;	
+	font-family: 'Gloria Hallelujah', cursive;
+
+}
+
+div.content_list {
+	float: left;
+	width: 580px;
+	padding-right: 10px;
+	margin-right: 10px;
+	border-right: 1px solid #e8e8e8;
+}
+
+div.message_content {
+	overflow: auto;	
+}
+
+div.ingredients {
+	float: left;
+	margin-right: 20px;
+	width: 180px;
+}
+
+.inner div.photo_zone a img {
+	width: 100%;
+}
+
+.inner div.photo_zone {
+	height: auto !important;
+}
+
+div.inner div.tipsy {
+	max-width: 400px !important;
+}
+
+#messages_list li.last,
+#messages_list .message.last {
+	margin-right: 0px !important;
+}
+
+#most_voted .message.last {
+	margin-bottom: 0px !important;
+}
+
+
+.sidebar ul#most_voted .message {
+	margin-right: 0px;
+}
+div.sidebar {
+	float: left;
+	width: 200px;
+}
 div.input {
 	width: 700px;
 }
@@ -42,12 +97,40 @@ box-shadow: 0px 0px 10px 0px #11162e;
 	background-color: white;
 	overflow: auto;
 	padding: 20px;
+	clear: both;
 }
 
-h1, h2 { font-family: 'Droid Serif', arial, serif; 
+#header ul {
+	float: left;
+	margin-left: 20px;
+}
+
+#header ul li {
+	float: left;
+	margin-right: 20px;
+	list-style: none;
+	background-color: #fffeff;
+	padding: 5px 8px;
+	-webkit-box-shadow: 0px 0px 10px 0px #11162e;
+-moz-box-shadow: 0px 0px 10px 0px #11162e;
+box-shadow: 0px 0px 10px 0px #11162e;
+
+
+
+}
+
+
+h1, h2 { font-family: 'Gloria Hallelujah', cursive;
 margin: 0px; margin-bottom: 10px;
 font-size: 26px;
 	color: #0352a7;
+}
+
+h3 {
+	font-family: 'Gloria Hallelujah', cursive;
+	font-size: 20px;
+	margin-bottom: 0px;
+	color: #0247a4;
 }
 
 h2 {
@@ -64,16 +147,27 @@ h2 span.name {
 
 
 div#logo {
-	-webkit-box-shadow: 0px 0px 10px 0px #11162e;
+	/*-webkit-box-shadow: 0px 0px 10px 0px #11162e;
 -moz-box-shadow: 0px 0px 10px 0px #11162e;
-box-shadow: 0px 0px 10px 0px #11162e;
+box-shadow: 0px 0px 10px 0px #11162e;*/
 
-	background-image: url(../images/logo.png);
-	height: 84px;
-	width: 501px;
-	text-indent: -9999px;
+	/*background-image: url(../images/logo.png);*/
+	/*height: 84px;
+	width: 501px;*/
+	/*text-indent: -9999px;*/
 	margin-bottom: 10px;
+	float: left;
 }
+
+div#logo h1 {
+	float: left;
+	width: 150px;
+	height: 20px;
+	text-indent: -9999px;
+	background: url(../images/logo_bbva.png) no-repeat;
+}
+
+
 
 div#footnotes_debug {
 		-webkit-box-shadow: 0px 0px 10px 0px #11162e;
@@ -104,7 +198,7 @@ ul#categories li a {
 	padding-top: 20px;
 	text-decoration: none;
 	background-color: #f0f0f0;
-	font-family: 'Droid Serif', arial, serif; 
+	font-family: 'Gloria Hallelujah', cursive;
 	font-size: 16px;
 }
 ul#categories li a:hover {
@@ -291,7 +385,7 @@ textarea#message_content.text.optional {
         display: list-item; }
     form fieldset > ol > li.error input[type=text], form fieldset > ol > li.error input[type=password], form fieldset > ol > li.error input[type=email], form fieldset > ol > li.error input[type=url], form fieldset > ol > li.error input[type=tel], form fieldset > ol > li.error textarea {
       border: 1px solid #cc0000; }
-  form input[type=submit] {
+  form input[type=submit],a.button {
     box-shadow: 0 1px 2px #aaaaaa;
     -moz-box-shadow: 0 1px 2px #aaaaaa;
     -webkit-box-shadow: 0 1px 2px #aaaaaa;
@@ -316,19 +410,21 @@ textarea#message_content.text.optional {
 	font-style: normal;
 }
 
-#messages_list li.message div.meta_data div.votes div.vote_count {
+#messages_list .message div.meta_data div.votes div.vote_count,
+#most_voted .message div.meta_data div.votes div.vote_count {
 	float: left;
 	margin-right: 10px;	
 	padding: 4px 8px;
 	font-size: 11px;
 	background-color: #fffeff;
 	color: #24628f;
-	-webkit-border-radius: 5px;
+	-webkit-border-radius: 0px;
 	-moz-border-radius: 5px;
-	border-radius: 5px
+	border-radius: 0px
 }
 
-#messages_list li.message div.meta_data div.votes div.submit{
+#messages_list .message div.meta_data div.votes div.submit,
+#most_voted .message div.meta_data div.votes div.submit{
 	float: right;
 }
 
@@ -340,10 +436,12 @@ textarea#message_content.text.optional {
       -webkit-box-shadow: 0 1px 3px #888888; }
       form input[type=submit]:hover span.icon svg path, form input[type=submit]:hover span.icon svg polygon, form input[type=submit]:hover span.icon svg rect, form input[type=submit]:hover span.icon svg circle {
         fill: white !important; }
-    form input[type=submit]:active {
+    form input[type=submit]:active,
+    a.button:active {
       box-shadow: inset 0 1px 2px black;
       -moz-box-shadow: inset 0 1px 2px black;
       -webkit-box-shadow: inset 0 1px 2px black; }
+
   form fieldset.buttons li {
     float: left;
     padding-right: 0.5em;
@@ -408,53 +506,148 @@ textarea#message_content.text.optional {
           height: 9px; }
 
 
-
-ul#messages_list {
+#messages_list,
+ul#most_voted {
 	padding: 10px;
 	overflow: auto;
+	margin-bottom: 0px;
 }
 
-ul#messages_list li {
+ul#most_voted {
+	width: ;	
+}
+
+#messages_list {
+	margin-top: 20px;
+	padding-right: 0px;
+}
+
+
+#messages_list li,
+ul#most_voted li,
+div.message {
 	float: left;
-	margin-right: 20px;
-	padding: 10px;
-	width: 240px;
-		-webkit-box-shadow: 0px 0px 10px 0px #ccd6e3;
--moz-box-shadow: 0px 0px 10px 0px #ccd6e3;
-box-shadow: 0px 0px 10px 0px #ccd6e3;
+	margin-right: 10px;
+	width: 180px;
+	-webkit-box-shadow: 0px 0px 8px 1px #c1c1c1;
+	/*#ccd6e3*/
+  -moz-box-shadow: 0px 0px 8px 1px #c1c1c1;
+  box-shadow: 0px 0px 8px 1px #c1c1c1;
 	/*background-color: #ccd6e3;*/
-		background-color: #eef6fb;
+	background-color: #eef6fb;
 	list-style-type: none;
 	margin-bottom: 20px;
 	overflow: hidden;
 }
 
-.message input#vote_submit.button {
+#footer a.button {
+	width: 200px;
+}
+
+div.main {
+	overflow: auto;
+}
+
+div#footer {
+	text-align: center;
+	margin: 10px 0px;
+}
+
+div.share_zone {
+	padding: 5px 10px;
+	background-color: #404040;
+	font-size: 12px;
+	overflow: auto;
+	text-transform: capitalize;
+}
+div.share_zone a {
+	color: white;
+	text-decoration: none;
+}
+
+a.facebook_icon {
+	background-image: url(../images/facebook-icon.gif);
+	height: 16px;
+	width: 16px;
+	text-indent: -9999px;
+	display: block;
+	float: left;
+}
+
+a.twitter_icon {
+	background-image: url(../images/twitter-icon.gif);
+	height: 16px;
+	width: 16px;
+	text-indent: -9999px;
+	display: block;
+	float: left;
+}
+
+
+div.share_zone div.title {
+	float: left;	
+}
+
+div.icons {
+	float: right;	
+	overflow: hidden;
+	/*width: 32px;*/
+}
+
+div.icons a:hover {
+	background-color: transparent;
+}
+
+div.photo_zone {
+	text-align: center;
+	height: 150px;
+	overflow: hidden;
+}
+
+div.meta_data {
+	padding: 5px 10px;
+	overflow: auto;
+}
+
+.message input#vote_submit.button,
+a.button {
 	font-size: 10px;
 	font-weight: lighter;
-	
-	    background: #2d61a7; 
+	background-color: #2d61a7; 
     background: -webkit-gradient(linear, left top, left bottom, from(#5c7ca6), to(#2d61a7));
     background: -moz-linear-gradient(-90deg, #5c7ca6, #3469a8);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#2d61a7, endColorstr=#5c7ca6);
     -ms-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#2d61a7, endColorstr=#5c7ca6);
-	
-	
-	
+	margin-top: 2px;
 }
 
-#messages_list li.message h4 {
+a.button {
+
+	display: block;
+	width: 60px;
+	-moz-border-radius: 10px;
+	-webkit-border-radius: 10px;
+	border-radius:10px;
+	text-align: center;
+	color: white;
+	text-decoration: none;
+	margin: 0px auto;
+}
+
+#messages_list .message h4,
+#most_voted .message h4 {
 	margin-top: 0px;
 	margin-bottom: 0px;
 }
 
-#messages_list li.message div.content p {
+#messages_list .message div.content p,
+#most_voted .message div.content p {
 	margin-top: 0px;
 	font-size: 11px;
 	color: #7d7d7d;
 	line-height: 1.6em;
 	display: block;
-	width: 240px;
+	/*width: 240px;*/
 	overflow: auto;
 }
 
@@ -465,5 +658,25 @@ box-shadow: 0px 0px 10px 0px #ccd6e3;
 a.media {
 	width: 100px !important;
 	display: none;
+}
+
+.inner #messages_list {
+	margin-top: 10px;
+	padding: 10px;
+}
+.inner #messages_list .message {
+	width: 100%;
+}
+
+.inner div.photo_zone a {
+	overflow: hidden;
+	height: auto;
+	display: block;
+}
+
+
+div.how_to {
+	float: left;
+	width: 380px;	
 }
 
