--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -6,7 +6,7 @@
 
 body {
 	background-color: black;
-	background-image: -webkit-gradient(
+	/*background-image: -webkit-gradient(
     linear,
     left bottom,
     left top,
@@ -15,13 +15,13 @@ body {
 );
 background-image: -moz-linear-gradient(
     center bottom,
-    rgb(28,49,77) 20%,
-    rgb(43,88,143) 50%
-);
+    rgb(43,88,143) 50%,
+    rgb(28,49,77) 20%
+);*/
 
 	margin: 0px;
 	padding: 10px;
-	font-family: Georgia, "Times New Roman", Times, serif;
+	/*font-family: Georgia, "Times New Roman", Times, serif;*/
 }
 
 .sidebar h3 {
@@ -98,27 +98,44 @@ box-shadow: 0px 0px 10px 0px #11162e;
 	background-color: white;
 	overflow: auto;
 	padding: 10px;
+	padding-left: 20px;
 	clear: both;
 	width: 810px;
 }
 
 #header ul {
 	float: left;
-	margin-left: 400px;
+	margin-left: 430px;
 }
 
 #header ul li {
 	float: left;
-	margin-right: 20px;
+	font-size: 11px;
+	margin-right: 0px;
 	list-style: none;
-	background-color: #fffeff;
+	/*background-color: #fffeff;*/
 	padding: 5px 8px;
-	-webkit-box-shadow: 0px 0px 10px 0px #11162e;
+	/*-webkit-box-shadow: 0px 0px 10px 0px #11162e;
 -moz-box-shadow: 0px 0px 10px 0px #11162e;
-box-shadow: 0px 0px 10px 0px #11162e;
+box-shadow: 0px 0px 10px 0px #11162e;*/
 
 
 
+}
+
+#header ul li a.button {
+	width: auto;
+	-webkit-box-shadow: none;
+	-moz-box-shadow: none;
+	box-shadow: none;
+}
+
+label.string.optional {
+	display: block;
+	font-family: Arial, Helvetica, Geneva, sans-serif;
+	margin-bottom: 5px;
+	color: #0352a7;
+	font-size: 12px;
 }
 
 
@@ -172,7 +189,7 @@ div#logo h1 {
 div#logo h1 a {
 	/*float: left;*/
 	width: 150px;
-	height: 25px;
+	height: 23px;
 	display: block;
 	text-indent: -9999px;
 	background: url(../images/logo_bbva.png) no-repeat;
@@ -211,6 +228,7 @@ h2#contest_logo a {
 
 p.description {
 	color: #808080;
+	margin-bottom: 20px;
 }
 
 #messages_list h3 {
@@ -407,7 +425,21 @@ form {
     border: 1px solid #c9d0d6;
     font-size: 0.95em;
     outline: none;
-    padding: 8px 10px; }
+    padding: 8px 10px;margin-bottom: 10px; }
+
+.content_list h1 {
+	margin-bottom: 20px;
+}
+
+div.flash {
+	padding: 10px 20px;
+	margin: 20px 0px;
+	background-color: #ffd0da;
+	border-top: 1px solid #fcb4b3;
+	border-bottom: 1px solid #fcb4b3;
+	color: #e45060;
+	font: normal normal 12px Arial, Helvetica, Geneva, sans-serif;
+}
     form input[type=text]:focus, form input[type=password]:focus, form input[type=email]:focus, form input[type=url]:focus, form input[type=tel]:focus, form textarea:focus {
       border: 1px solid #c3c9ce;
       box-shadow: 0 0 2px #0352a7;
@@ -617,6 +649,7 @@ ul#most_voted {
 #messages_list {
 	margin-top: 5px;
 	padding-right: 0px;
+	padding-left: 5px;
 }
 
 .section_header h4.right {
