Fixed new style and missing label

--- a/app/views/messages/new.html.haml
+++ b/app/views/messages/new.html.haml
@@ -4,7 +4,7 @@
   = f.input :title, :label => false
   = f.input :ingredients, :label => "Ingredientes"
   = f.input :photo, :label => "Sube la mejor foto de tu receta"
-  = f.input :content, :label => false
+  = f.input :content, :label => "¿Cómo se prepara?"
 
   = f.input :user_id, :as => :hidden, :value => current_user.id if current_user
   = f.submit 'Enviar receta'
