--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -5,7 +5,7 @@
 */
 
 body {
-	background-color: black;
+	background-color: #000000;
 	/*background-image: -webkit-gradient(
     linear,
     left bottom,
@@ -22,6 +22,10 @@ background-image: -moz-linear-gradient(
 	margin: 0px;
 	padding: 10px;
 	/*font-family: Georgia, "Times New Roman", Times, serif;*/
+}
+
+a img{
+  border: none;
 }
 
 .sidebar h3 {
@@ -646,6 +650,7 @@ ul#most_voted {
 	padding: 10px;
 	overflow: auto;
 	margin-bottom: 0px;
+  margin-left: 0px;
 }
 
 ul#most_voted {
