--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,6 +4,8 @@
     %title Kato
     %link{:href => "http://fonts.googleapis.com/css?family=Gloria+Hallelujah", :rel => "stylesheet", :type => "text/css"}/
     = include_stylesheets :app
+    /[if IE]
+      %link{:href=>"/stylesheets/ie.css", :media=>"screen", :rel=>"stylesheet",  :type=>"text/css"}
     = csrf_meta_tag
   %body
     #header
