Moved size to be more FB friendly

--- a/app/views/home/terms.html.haml
+++ b/app/views/home/terms.html.haml
@@ -1,16 +1,12 @@
 %h2 Términos y condiciones del concurso
 
 .content
-  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-  consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-  cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-  proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-
-  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-  consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-  cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-  proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+  %ul
+    %li Promoción vigente del 12 al 24 de agosto del 2011.
+    %li Dirigida a clientes que tengan una Cuenta Ganadora.
+    %li Enviar una receta a través de la página Facebook del banco.
+    %li El 24 de agosto se seleccionarán las 25 mejores recetas, de estas se seleccionan las 15 más votadas y estas serán filtradas finalmente por un jurado para determinar los 5 participantes de la gran final en Mistura.
+    %li El premio se entregará el 18 de setiembre Plaza Perú Gourmet ubicado en la Feria Mistura.
+    %li Se entregará un único premio de US$ 5,000.
+    %li Cliente firmará acta de entrega del dinero.
+    %li En caso un ganador resida en alguna ciudad de provincia, el banco le reembolsará US$ 500 a su cuenta ganadora para que pueda cubrir los gastos de transporte, hospedaje y otros gastos vinculados para venir a Lima a la final de Mistura. Antes que el banco le haga el depósito del dinero, el finalista deberá de firmar un acta de compromiso donde se compromete a utilizar debidamente el dinero entregado.
