--- a/public/stylesheets/ie.css
+++ b/public/stylesheets/ie.css
@@ -10,12 +10,15 @@ a img{
 }
 
 .wrapper{
-  filter: progid:DXImageTransform.Microsoft.Shadow(color='#11162e', Direction=145, Strength=10);
+  filter: progid:DXImageTransform.Microsoft.Shadow(color='#11162e', Direction=145, Strength=2)
+  progid:DXImageTransform.Microsoft.Glow(color='#11162e', Strength='2');
 }
 a.button{
-  filter: progid:DXImageTransform.Microsoft.Shadow(color='#aaaaaa', Direction=145, Strength=2);
+  filter: progid:DXImageTransform.Microsoft.Shadow(color='#aaaaaa', Direction=145, Strength=2)
+  progid:DXImageTransform.Microsoft.Glow(color='#aaaaaa', Strength='2');
 }
 #messages_list li, ul#most_voted li, div.message{
-  filter: progid:DXImageTransform.Microsoft.Shadow(color='#c1c1c1', Direction=145, Strength=8);
+  filter: progid:DXImageTransform.Microsoft.Shadow(color='#c1c1c1', Direction=145, Strength=2)
+  progid:DXImageTransform.Microsoft.Glow(color='#c1c1c1', Strength='2');
 }
 #messages_list .message div.meta_data div.votes div.vote_count, #most_voted .message div.meta_data div.votes div.vote_count{}
