overflow a div.share_zone

--- a/public/stylesheets/ie.css
+++ b/public/stylesheets/ie.css
@@ -6,7 +6,7 @@ h2#contest_logo a, div#logo h1 a{
   behavior: url(/stylesheets/iepngfix.htc);
 }
 
-#messages_list, .meta_data{
+#messages_list, div.meta_data, div.share_zone{
   overflow: hidden !important;
 }
 .meta_data{
