--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -876,3 +876,21 @@ div.content ul li {
 	margin-bottom: 10px;
 	color: #666;
 }
+
+
+.tooltip {
+	position: absolute;
+	width: auto;
+	height: auto;
+	background: black !important;
+	text-align: center;
+	padding: 5px 15px;
+	color:white;
+	z-index: 50;
+	border-radius:5px;
+	-moz-border-radius:5px;
+	-webkit-border-radius:5px;
+  box-shadow:2px 2px 3px #000;
+  -moz-box-shadow:2px 2px 3px #000;
+  -webkit-box-shadow:2px 2px 3px 	
+}
