--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -5,7 +5,6 @@
 */
 
 body {
-	background-color: #000000;
 	/*background-image: -webkit-gradient(
     linear,
     left bottom,
@@ -21,9 +20,7 @@ background-image: -moz-linear-gradient(
 
 	margin: 0px;
 	padding: 10px;
-	/*font-family: Georgia, "Times New Roman", Times, serif;*/
-	/*width: 760px;
-	background: red;*/
+	background: #000000 url(../images/back_canasta.jpg) no-repeat 140px -339px;
 }
 
 /*html {
