--- a/public/assets/app.css
+++ b/public/assets/app.css
@@ -803,6 +803,7 @@ div.message {
 	margin-bottom: 20px;
 	overflow: hidden;
 	background-color: #323333;
+  position: relative;
 }
 
 #footer a.button {
@@ -997,7 +998,7 @@ div.photo_zone a {
   box-shadow:2px 2px 3px #000;
   -moz-box-shadow:2px 2px 3px #000;
   -webkit-box-shadow:2px 2px 3px;
-  margin-top:80px;
-  margin-left:40px;
+  top:80px;
+  left:40px;
   opacity:0.7;
 }
