--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -20,6 +20,7 @@ background-image: -moz-linear-gradient(
 
 	margin: 0px;
 	background: #000000 url(../images/back_whole.jpg) no-repeat -19px 492px;
+	padding: 0px;
 }
 
 .page {
