--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -803,7 +803,7 @@ div.photo_zone {
 	overflow: hidden;
 }
 div.meta_data {
-	padding: 5px 10px;
+	padding: 5px 5px;
 	overflow: auto;
 }
 
@@ -821,6 +821,9 @@ a.button {
 	      box-shadow: inset 0 1px 1px #7591b5;
       -moz-box-shadow: inset 0 1px 4px #7591b5;
       -webkit-box-shadow: inset 1 1px 1px #7591b5;
+      -webkit-border-radius: 3px;
+      -moz-border-radius: 3px;      
+      border-radius: 3px
 }
 
 a.button {
