--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -148,13 +148,20 @@ box-shadow: 0px 0px 10px 0px #11162e;*/
 
 #header ul li a.button {
 	width: auto;
+	padding: 5px 7px;
 	-webkit-box-shadow: none;
 	-moz-box-shadow: none;
 	box-shadow: none;
 }
 #header ul li.like {
 	margin-top: 0px;
+	width: 50px;
 }
+
+#header ul li.like iframe {
+	width: 200px;
+}
+
 label.optional {
 	display: block;
 	font-family: Arial, Helvetica, Geneva, sans-serif;
